# forgeax-engine

./: .gitattributes  .gitignore  .jscpd.json  .npmrc  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  biome.json  forgeax-metrics.schema.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsup.base.ts  vitest.config.ts  vitest.setup-webgpu.ts
apps/collectathon/: README.md  (+6 more)
rules/: forgeax-engine-usage.md
scripts/: bake-ibl-reference.mjs  bevy-coverage-audit.mjs  bevy-demo.mjs  build-apps.mjs  check-app-package-no-component.mjs  check-async-form.mjs  check-bevy-smoke-dependencies.mjs  check-browser-safe-entries.mjs  check-ci-channel-alignment.mjs  check-ci-channel-alignment.test.mjs  check-concern-reverse-coupling.mjs  check-ecs-no-runtime-import.mjs  check-image-pipeline-isolation.mjs  check-learn-render-onerror-gate.mjs  check-metrics-declared.mjs  check-mvp25-targets.mjs  check-rename-grep-gate.mjs  check-render-graph-no-runtime-import.mjs  check-shader-no-compiler-import.mjs  check-shader-no-naga-in-dist.mjs  check-shader-runtime-deps.mjs  check-staged-lockfiles.mjs  check-workflow-ssot.mjs  check-workspaces-equivalence.mjs  check_image_meta_alignment.py  check_learn_render_readme.py  ci-duration-baseline.mjs  dev-live.mjs  dup-check.mjs  dup-check.test.mjs  ensure-wgpu-wasm-pkg.mjs  fx.ts  gauntlet.mjs  lint-biome-strict.mjs  lint-internal.mjs  migrate-standard-material-pack.mjs  publish-wasm-release.mjs  setup-fbx-sdk.mjs  sync-harness.mjs  sync.mjs  (+2 more)
scripts/__tests__/fixtures/bevy-coverage/bevy/: Cargo.toml
(+1440 files in other folders)
